--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 #screen {
   width: 100vw;
   height: 56.25vw;
@@ -16,7 +27,7 @@
 /* splashbillede */
 
 #splashbillede {
-  background-image: url(svger/forside.svg);
+  background-image: url(SVG/forside.svg);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -27,15 +38,36 @@
   overflow: hidden;
 }
 
+/* overskrift */
+
+#overskrift {
+  background-image: url(SVG/overskrift.svg);
+  width: 38%;
+  height: 38%;
+  position: absolute;
+  background-size: cover;
+  top: -23%;
+  left: 0%;
+  pointer-events: none;
+  aspect-ratio: 1/1;
+  z-index: 2;
+
+  animation-name: glow_kf;
+  animation-duration: 0.8s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
 /* lyd fra og til */
 
 #sound_til {
   width: 12%;
   height: 12%;
   position: absolute;
-  top: 4%;
+  top: 88%;
   left: 92.33%;
-  background-image: url(svger/sound_til.svg);
+  background-image: url(SVG/sound_til.svg);
   background-repeat: no-repeat;
   aspect-ratio: 1/1;
   z-index: 2;
@@ -45,7 +77,7 @@
   width: 12%;
   height: 12%;
   position: absolute;
-  top: 4.1%;
+  top: 88%;
   left: 91.9%;
   background-image: url(SVG/sound_fra.svg);
   background-repeat: no-repeat;
@@ -55,24 +87,24 @@
 
 /* elementer */
 
-#omgmig_container {
-  width: 12%;
-  height: 12%;
+#ommig_container {
+  width: 50%;
+  height: 50%;
   position: absolute;
-  top: 4.1%;
-  left: 91.9%;
-  background-image: url(SVG/sound_fra.svg);
+  top: -5%;
+  left: 26%;
+  background-image: url(SVG/omgmig.svg);
   background-repeat: no-repeat;
   aspect-ratio: 1/1;
   z-index: 2;
 }
 
 #tema02_container {
-  width: 12%;
-  height: 12%;
+  width: 50%;
+  height: 50%;
   position: absolute;
-  top: 4.1%;
-  left: 91.9%;
+  top: 15%;
+  left: 26.5%;
   background-image: url(SVG/tema02.svg);
   background-repeat: no-repeat;
   aspect-ratio: 1/1;
@@ -80,11 +112,11 @@
 }
 
 #tema03_container {
-  width: 12%;
-  height: 12%;
+  width: 50%;
+  height: 50%;
   position: absolute;
-  top: 4.1%;
-  left: 91.9%;
+  top: -15%;
+  left: 38%;
   background-image: url(SVG/tema03.svg);
   background-repeat: no-repeat;
   aspect-ratio: 1/1;
@@ -92,11 +124,11 @@
 }
 
 #tema04_container {
-  width: 12%;
-  height: 12%;
+  width: 50%;
+  height: 50%;
   position: absolute;
-  top: 4.1%;
-  left: 91.9%;
+  top: 21%;
+  left: 37%;
   background-image: url(SVG/tema04.svg);
   background-repeat: no-repeat;
   aspect-ratio: 1/1;
@@ -104,11 +136,11 @@
 }
 
 #tema05_container {
-  width: 12%;
-  height: 12%;
+  width: 50%;
+  height: 50%;
   position: absolute;
-  top: 4.1%;
-  left: 91.9%;
+  top: 3%;
+  left: 39%;
   background-image: url(SVG/tema05.svg);
   background-repeat: no-repeat;
   aspect-ratio: 1/1;
@@ -116,33 +148,208 @@
 }
 
 #stjerne_container {
-  width: 10%;
-  height: 10%;
+  width: 7%;
   position: absolute;
-  left: 19%;
-  top: 6%;
+  left: 70%;
+  top: 10%;
   aspect-ratio: 1/1;
+}
+
+#stjerne_sprite {
+  width: 100%;
+  height: 100%;
   background-image: url(SVG/stjerne.svg);
   background-size: cover;
 
-  animation-name: glow;
+  animation-name: glow_kf;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+#stjerne_container1 {
+  width: 7%;
+  position: absolute;
+  left: 25%;
+  top: 27%;
+  aspect-ratio: 1/1;
+}
+
+#stjerne_sprite1 {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/stjerne.svg);
+  background-size: cover;
+
+  animation-name: glow_kf;
+  animation-duration: 0.8s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+#stjerne_container2 {
+  width: 8%;
+  position: absolute;
+  left: 80%;
+  top: 30%;
+  aspect-ratio: 1/1;
+}
+
+#stjerne_sprite2 {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/stjerne.svg);
+  background-size: cover;
+
+  animation-name: glow_kf;
+  animation-duration: 0.6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+#stjerne_container3 {
+  width: 5%;
+  position: absolute;
+  left: 16%;
+  top: 20%;
+  aspect-ratio: 1/1;
+}
+
+#stjerne_sprite3 {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/stjerne.svg);
+  background-size: cover;
+
+  animation-name: glow_kf;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+#stjerne_container4 {
+  width: 9%;
+  position: absolute;
+  left: 59%;
+  top: 22%;
+  aspect-ratio: 1/1;
+}
+
+#stjerne_sprite4 {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/stjerne.svg);
+  background-size: cover;
+
+  animation-name: glow_kf;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+#stjerne_container5 {
+  width: 4%;
+  position: absolute;
+  left: 6%;
+  top: 36%;
+  aspect-ratio: 1/1;
+}
+
+#stjerne_sprite5 {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/stjerne.svg);
+  background-size: cover;
+
+  animation-name: glow_kf;
+  animation-duration: 0.4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+#stjerne_container6 {
+  width: 4.5%;
+  position: absolute;
+  left: 93%;
+  top: 28%;
+  aspect-ratio: 1/1;
+}
+
+#stjerne_sprite6 {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/stjerne.svg);
+  background-size: cover;
+
+  animation-name: glow_kf;
+  animation-duration: 0.4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+#sol_sprite {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/sol.svg);
+  background-size: cover;
+
+  animation-name: drej_kf;
   animation-timing-function: linear;
   animation-direction: alternate;
 }
 
 #sol_container {
-  width: 10%;
-  height: 10%;
+  width: 25%;
   position: absolute;
-  left: 19%;
-  top: 6%;
+  left: 77%;
+  top: -5%;
   aspect-ratio: 1/1;
-  background-image: url(SVG/stjerne.svg);
+  background-image: url(SVG/sol.svg);
   background-size: cover;
 
-  animation-name: drej;
+  animation-name: drej_kf;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-direction: alternate;
+}
+
+#kat_sprite {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/kat.svg);
+  background-size: cover;
+  left: 80%;
+  top: 80%;
+}
+
+#kat_container {
+  width: 100%;
+  position: absolute;
+  aspect-ratio: 1/1;
+}
+
+.kat_container {
+  animation-name: flyv_kat;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes flyv_kat {
+  0% {
+    transform: translateX(-400%);
+  }
+  100% {
+    transform: translateX(400%);
+  }
 }
 
 /* anmation effekter */
@@ -150,12 +357,14 @@
 /*glow */
 
 .glow {
-  animation: glow 1s infinite;
+  animation: glow_kf;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-direction: alternate;
 }
 
-@keyframes glow {
+@keyframes glow_kf {
   0%,
   100% {
     filter: brightness(100%) drop-shadow(0 0 -1px white);
@@ -177,11 +386,20 @@
 }
 
 @keyframes drej_kf {
-  0% {
-    transform: rotate(0);
-  }
-
-  100% {
+  to {
     transform: rotate(360deg);
   }
+}
+
+.hide {
+  display: none;
+}
+
+.pause {
+  animation-play-state: paused;
+}
+
+.pos1 {
+  top: 50%;
+  left: 10%;
 }
