--- a/index.css
+++ b/index.css
@@ -299,10 +299,6 @@ body {
   height: 100%;
   background-image: url(SVG/sol.svg);
   background-size: cover;
-
-  animation-name: drej_kf;
-  animation-timing-function: linear;
-  animation-direction: alternate;
 }
 
 #sol_container {
@@ -311,8 +307,6 @@ body {
   left: 77%;
   top: -5%;
   aspect-ratio: 1/1;
-  background-image: url(SVG/sol.svg);
-  background-size: cover;
 
   animation-name: drej_kf;
   animation-duration: 10s;
@@ -326,31 +320,30 @@ body {
   height: 100%;
   background-image: url(SVG/kat.svg);
   background-size: cover;
-  left: 80%;
-  top: 80%;
 }
 
-/* #kat_container {
-  width: 100%;
+#kat_container {
+  width: 25%;
+  left: 80%;
+  top: 40%;
   position: absolute;
   aspect-ratio: 1/1;
-}
+  filter: grayscale(100%) blur(2.5px);
 
-.kat_container {
-  animation-name: flyv_kat;
-  animation-duration: 10s;
+  animation-name: gå_kat;
+  animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
 
-@keyframes flyv_kat {
+@keyframes gå_kat {
   0% {
-    transform: translateX(-400%);
+    transform: translateX(-80%);
   }
   100% {
-    transform: translateX(400%);
+    transform: translateX(90%);
   }
-} */
+}
 
 /* anmation effekter */
 
@@ -383,6 +376,7 @@ body {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-fill-mode: both;
+  transform-origin: 100%;
 }
 
 @keyframes drej_kf {
