--- a/index.css
+++ b/index.css
@@ -87,64 +87,85 @@ body {
 
 /* elementer */
 
+#ommig_sprite {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/ommig.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 #ommig_container {
-  width: 50%;
-  height: 50%;
+  width: 28%;
   position: absolute;
   top: -5%;
   left: 26%;
-  background-image: url(SVG/omgmig.svg);
-  background-repeat: no-repeat;
   aspect-ratio: 1/1;
   z-index: 2;
+}
+
+#tema02_sprite {
+  background-image: url(SVG/tema02.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #tema02_container {
-  width: 50%;
-  height: 50%;
+  width: 28%;
   position: absolute;
   top: 15%;
   left: 26.5%;
-  background-image: url(SVG/tema02.svg);
-  background-repeat: no-repeat;
   aspect-ratio: 1/1;
-  z-index: 2;
+}
+
+#tema03_sprite {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/tema03.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #tema03_container {
-  width: 50%;
-  height: 50%;
+  width: 28%;
   position: absolute;
-  top: -15%;
-  left: 38%;
-  background-image: url(SVG/tema03.svg);
-  background-repeat: no-repeat;
+  top: -14.8%;
+  left: 37.6%;
   aspect-ratio: 1/1;
-  z-index: 2;
+}
+
+#tema04_sprite {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/tema04.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #tema04_container {
-  width: 50%;
-  height: 50%;
+  width: 28%;
   position: absolute;
   top: 21%;
   left: 37%;
-  background-image: url(SVG/tema04.svg);
-  background-repeat: no-repeat;
   aspect-ratio: 1/1;
-  z-index: 2;
+}
+
+#tema05_sprite {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/tema05.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #tema05_container {
-  width: 50%;
-  height: 50%;
+  width: 28%;
   position: absolute;
   top: 3%;
   left: 39%;
-  background-image: url(SVG/tema05.svg);
-  background-repeat: no-repeat;
   aspect-ratio: 1/1;
-  z-index: 2;
 }
 
 #stjerne_container {
@@ -393,7 +414,6 @@ body {
   animation-play-state: paused;
 }
 
-.pos1 {
-  top: 50%;
-  left: 10%;
+.knapper :hover {
+  opacity: 50%;
 }
