--- a/index.css
+++ b/index.css
@@ -88,20 +88,19 @@ body {
 /* elementer */
 
 #ommig_sprite {
-  width: 100%;
-  height: 100%;
   background-image: url(SVG/ommig.svg);
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #ommig_container {
-  width: 28%;
+  width: 10%;
   position: absolute;
-  top: -5%;
-  left: 26%;
+  top: 12%;
+  left: 36%;
   aspect-ratio: 1/1;
-  z-index: 2;
 }
 
 #tema02_sprite {
@@ -113,10 +112,10 @@ body {
 }
 
 #tema02_container {
-  width: 28%;
+  width: 10%;
   position: absolute;
-  top: 15%;
-  left: 26.5%;
+  top: 28%;
+  left: 36.5%;
   aspect-ratio: 1/1;
 }
 
@@ -129,10 +128,10 @@ body {
 }
 
 #tema03_container {
-  width: 28%;
+  width: 10%;
   position: absolute;
-  top: -14.8%;
-  left: 37.6%;
+  top: 20%;
+  left: 45.5%;
   aspect-ratio: 1/1;
 }
 
@@ -145,10 +144,10 @@ body {
 }
 
 #tema04_container {
-  width: 28%;
+  width: 10%;
   position: absolute;
-  top: 21%;
-  left: 37%;
+  top: 35%;
+  left: 45%;
   aspect-ratio: 1/1;
 }
 
@@ -161,10 +160,10 @@ body {
 }
 
 #tema05_container {
-  width: 28%;
+  width: 10%;
   position: absolute;
   top: 3%;
-  left: 39%;
+  left: 45%;
   aspect-ratio: 1/1;
 }
 
@@ -397,12 +396,17 @@ body {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-fill-mode: both;
-  transform-origin: 100%;
+  transform-origin: 0%;
+  animation: linear infinite;
 }
 
 @keyframes drej_kf {
+  from {
+    transform: rotate(0deg);
+  }
+
   to {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
   }
 }
 
