--- a/style.css
+++ b/style.css
@@ -4,11 +4,108 @@
   box-sizing: border-box;
 }
 
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* header/nav start */
+
 header {
-  background: #f2d9c4;
+  background: #d88e5c;
   padding: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   position: sticky;
   top: 0;
 }
+
+header ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #fbe91d;
+}
+
+.logo img {
+  height: 100%;
+  width: 100%;
+  grid-column: 2;
+}
+
+.sidepanel {
+  height: 350px;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #f3eed9;
+  overflow-x: hidden;
+  padding-top: 100px;
+  transition: 0.5s;
+}
+
+.sidepanel a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  color: #565a42;
+  display: block;
+  transition: 0.3s;
+  font-family: "Poppins";
+  font-style: italic;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.sidepanel a:hover {
+  color: #f2c85e;
+}
+
+.sidepanel .closebtn {
+  position: absolute;
+  top: 0;
+  margin-top: 30px;
+}
+
+.openbtn {
+  cursor: pointer;
+  place-self: start start;
+  padding: 10px 15px;
+  border: none;
+  background: transparent;
+}
+
+#nav_desktop {
+  display: none;
+}
+
+#kat_overskrift {
+  width: 100%;
+  height: 100%;
+  background-image: url(SVG/kat.svg);
+  background-size: cover;
+  grid-column: 3;
+}
+
+#kat_løber_overskrift {
+}
+
+/* 
+#kat_container {
+  width: 25%;
+  left: 80%;
+  top: 40%;
+  position: absolute;
+  aspect-ratio: 1/1;
+  filter: grayscale(100%) blur(2.5px);
+
+  animation-name: gå_kat;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+} */
