--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 
 header {
   background: #d88e5c;
-  padding: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   position: sticky;
@@ -27,7 +26,7 @@ header ul {
 
 a {
   text-decoration: none;
-  color: #fbe91d;
+  color: #e99c64;
 }
 
 .logo img {
@@ -36,34 +35,40 @@ a {
   grid-column: 2;
 }
 
+/* #mySidepanel {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+} */
+
 .sidepanel {
-  height: 350px;
-  width: 0;
+  height: 925px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #f3eed9;
+  background-color: #e2ceb5;
   overflow-x: hidden;
-  padding-top: 100px;
-  transition: 0.5s;
+  padding-top: 200px;
+  transition: 0.3s;
 }
 
 .sidepanel a {
-  padding: 8px 8px 8px 32px;
+  padding: 0px 0px 50px 30px;
   text-decoration: none;
-  color: #565a42;
+  color: #000000;
   display: block;
   transition: 0.3s;
-  font-family: "Poppins";
-  font-style: italic;
+  font-family: "Cinzel", serif;
+  font-style: bold;
   text-transform: uppercase;
-  font-weight: 700;
-  font-size: 1.2rem;
+  font-weight: 800;
+  font-size: 1.8rem;
+  line-height: 50px;
 }
 
 .sidepanel a:hover {
-  color: #f2c85e;
+  color: #de690a;
 }
 
 .sidepanel .closebtn {
@@ -75,7 +80,7 @@ a {
 .openbtn {
   cursor: pointer;
   place-self: start start;
-  padding: 10px 15px;
+  padding: 30px 50px 0px 30px;
   border: none;
   background: transparent;
 }
@@ -83,29 +88,3 @@ a {
 #nav_desktop {
   display: none;
 }
-
-#kat_overskrift {
-  width: 100%;
-  height: 100%;
-  background-image: url(SVG/kat.svg);
-  background-size: cover;
-  grid-column: 3;
-}
-
-#kat_løber_overskrift {
-}
-
-/* 
-#kat_container {
-  width: 25%;
-  left: 80%;
-  top: 40%;
-  position: absolute;
-  aspect-ratio: 1/1;
-  filter: grayscale(100%) blur(2.5px);
-
-  animation-name: gå_kat;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-} */
