--- a/ommig.css
+++ b/ommig.css
@@ -1,9 +1,168 @@
-body {
-  background: linear-gradient(#d89864, #e99c64, #e8a7b4, #b88e6d);
-  overflow-x: hidden;
+#ommig_beskrivelse {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  padding-top: 5rem;
+  gap: 10px;
 }
 
-main {
+h2 {
+  /* font-family: "Cinzel", serif; */
+  /* font-family: "Cinzel Decorative", cursive; */
+  font-family: "Vujahday Script", cursive;
+  font-size: 35px;
+  grid-column: 2/2;
+  text-align: center;
+}
+
+h3 {
+  /* font-family: "Vujahday Script", cursive; */
+  font-family: "Cinzel", serif;
+  font-size: 28px;
+  grid-column: 1/3;
+  text-align: left;
+  padding-left: 30px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+}
+
+h4 {
+  font-family: "Outfit", sans-serif;
+  font-size: 20px;
+  grid-column: 1/3;
+  text-align: left;
+  font-weight: 300;
+  padding-left: 30px;
+  padding-right: 10px;
+}
+
+p {
+  font-family: "Outfit", sans-serif;
+  font-size: 16px;
+  grid-column: 1/3;
+  text-align: left;
+  font-weight: 400;
+  padding-left: 30px;
+  line-height: 25px;
+  word-wrap: break-word;
+}
+
+#detaljer_beskrivelse {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  padding-top: 5rem;
+  padding-bottom: 50px;
+  gap: 10px;
+  line-height: 2.5rem;
+}
+
+#detaljer_beskrivelse h4 {
+  font-family: "Outfit", sans-serif;
+  font-size: 20px;
+  grid-column: 1;
+  grid-row: 1;
+  text-align: left;
+  font-weight: 300;
+  padding-left: 30px;
+  padding-right: 10px;
+}
+
+.detaljer_ikoner img {
+  width: 1rem;
+}
+
+.ikon_places {
+  padding-left: 30px;
+}
+
+.ikon_profile {
+  padding-left: 30px;
+}
+
+.ikon_heart {
+  padding-left: 30px;
+}
+
+.ikon_phone {
+  padding-left: 30px;
+}
+
+.ikon_instagram {
+  padding-left: 30px;
+}
+
+p1 {
+  font-family: "Outfit", sans-serif;
+  font-size: 16px;
+  grid-column: 2;
+  grid-row: 2;
+  text-align: left;
+  font-weight: 400;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 15px;
+  word-wrap: break-word;
+}
+
+p2 {
+  font-family: "Outfit", sans-serif;
+  font-size: 16px;
+  grid-column: 2;
+  grid-row: 3;
+  text-align: left;
+  font-weight: 400;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 15px;
+  word-wrap: break-word;
+}
+
+p3 {
+  font-family: "Outfit", sans-serif;
+  font-size: 16px;
+  grid-column: 2;
+  grid-row: 4;
+  text-align: left;
+  font-weight: 400;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 15px;
+  word-wrap: break-word;
+}
+
+p4 {
+  font-family: "Outfit", sans-serif;
+  font-size: 16px;
+  grid-column: 2;
+  grid-row: 5;
+  text-align: left;
+  font-weight: 400;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 15px;
+  word-wrap: break-word;
+}
+
+p5 {
+  font-family: "Outfit", sans-serif;
+  font-size: 16px;
+  grid-column: 2;
+  grid-row: 6;
+  text-align: left;
+  font-weight: 400;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 15px;
+  word-wrap: break-word;
+}
+
+.profilbillede img {
+  width: 100%;
+  height: 100%;
+}
+
+.profilbillede {
+  grid-column: 2/2;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
