--- a/ommig.css
+++ b/ommig.css
@@ -1,13 +1,42 @@
-#ommig_beskrivelse {
+/* billeder */
+
+.profilbillede img {
+  width: 100%;
+  height: 100%;
+}
+
+.detaljer_ikoner img {
+  width: 1rem;
+}
+
+.ikon_places {
+  padding-left: 30px;
+}
+
+.ikon_profile {
+  padding-left: 30px;
+}
+
+.ikon_heart {
+  padding-left: 30px;
+}
+
+.ikon_phone {
+  padding-left: 30px;
+}
+
+.ikon_instagram {
+  padding-left: 30px;
+}
+
+.ommig_beskrivelse {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  padding-top: 5rem;
+  padding-top: 4rem;
   gap: 10px;
 }
 
 h2 {
-  /* font-family: "Cinzel", serif; */
-  /* font-family: "Cinzel Decorative", cursive; */
   font-family: "Vujahday Script", cursive;
   font-size: 35px;
   grid-column: 2/2;
@@ -15,7 +44,6 @@ h2 {
 }
 
 h3 {
-  /* font-family: "Vujahday Script", cursive; */
   font-family: "Cinzel", serif;
   font-size: 28px;
   grid-column: 1/3;
@@ -46,7 +74,7 @@ p {
   word-wrap: break-word;
 }
 
-#detaljer_beskrivelse {
+.detaljer_beskrivelse {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
@@ -56,7 +84,7 @@ p {
   line-height: 2.5rem;
 }
 
-#detaljer_beskrivelse h4 {
+.detaljer_beskrivelse h4 {
   font-family: "Outfit", sans-serif;
   font-size: 20px;
   grid-column: 1;
@@ -65,30 +93,6 @@ p {
   font-weight: 300;
   padding-left: 30px;
   padding-right: 10px;
-}
-
-.detaljer_ikoner img {
-  width: 1rem;
-}
-
-.ikon_places {
-  padding-left: 30px;
-}
-
-.ikon_profile {
-  padding-left: 30px;
-}
-
-.ikon_heart {
-  padding-left: 30px;
-}
-
-.ikon_phone {
-  padding-left: 30px;
-}
-
-.ikon_instagram {
-  padding-left: 30px;
 }
 
 p1 {
@@ -156,13 +160,323 @@ p5 {
   word-wrap: break-word;
 }
 
-.profilbillede img {
-  width: 100%;
-  height: 100%;
+/* tekststørrelser 450 */
+
+@media (min-width: 450px) {
+  .ommig_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding-top: 4rem;
+    gap: 10px;
+  }
+  h2 {
+    /* font-family: "Cinzel", serif; */
+    /* font-family: "Cinzel Decorative", cursive; */
+    font-family: "Vujahday Script", cursive;
+    font-size: 30px;
+    grid-column: 3/4;
+    text-align: center;
+  }
+
+  h3 {
+    /* font-family: "Vujahday Script", cursive; */
+    font-family: "Cinzel", serif;
+    font-size: 20px;
+    grid-column: 1/3;
+    text-align: left;
+    padding-left: 30px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+  }
+
+  h4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 1/3;
+    text-align: left;
+    font-weight: 300;
+    padding-left: 30px;
+    padding-right: 10px;
+  }
+
+  p {
+    font-family: "Outfit", sans-serif;
+    font-size: 12px;
+    grid-column: 1/3;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    line-height: 20px;
+    word-wrap: break-word;
+  }
+
+  .detaljer_beskrivelse h4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 1;
+    grid-row: 1;
+    text-align: left;
+    font-weight: 300;
+    padding-left: 30px;
+    padding-right: 10px;
+  }
+
+  p1 {
+    font-family: "Outfit", sans-serif;
+    font-size: 12px;
+    grid-column: 2;
+    grid-row: 2;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p2 {
+    font-family: "Outfit", sans-serif;
+    font-size: 12px;
+    grid-column: 2;
+    grid-row: 3;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p3 {
+    font-family: "Outfit", sans-serif;
+    font-size: 12px;
+    grid-column: 2;
+    grid-row: 4;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 12px;
+    grid-column: 2;
+    grid-row: 5;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p5 {
+    font-family: "Outfit", sans-serif;
+    font-size: 12px;
+    grid-column: 2;
+    grid-row: 6;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
 }
 
-.profilbillede {
-  grid-column: 2/2;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
+/* tekststørrelser 600 */
+
+@media (min-width: 600px) {
+  .ommig_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding-top: 4rem;
+    gap: 10px;
+  }
+  h2 {
+    /* font-family: "Cinzel", serif; */
+    /* font-family: "Cinzel Decorative", cursive; */
+    font-family: "Vujahday Script", cursive;
+    font-size: 35px;
+    grid-column: 2/2;
+    text-align: center;
+  }
+
+  h3 {
+    /* font-family: "Vujahday Script", cursive; */
+    font-family: "Cinzel", serif;
+    font-size: 28px;
+    grid-column: 1/3;
+    text-align: left;
+    padding-left: 30px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+  }
+
+  h4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 20px;
+    grid-column: 1/3;
+    text-align: left;
+    font-weight: 300;
+    padding-left: 30px;
+    padding-right: 10px;
+  }
+
+  p {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 1/3;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    line-height: 25px;
+    word-wrap: break-word;
+  }
+
+  .detaljer_beskrivelse h4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 20px;
+    grid-column: 1;
+    grid-row: 1;
+    text-align: left;
+    font-weight: 300;
+    padding-left: 30px;
+    padding-right: 10px;
+  }
+
+  p1 {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 2;
+    grid-row: 2;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 20px;
+    word-wrap: break-word;
+  }
+
+  p2 {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 2;
+    grid-row: 3;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 20px;
+    word-wrap: break-word;
+  }
+
+  p3 {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 2;
+    grid-row: 4;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 20px;
+    word-wrap: break-word;
+  }
+
+  p4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 2;
+    grid-row: 5;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 20px;
+    word-wrap: break-word;
+  }
+
+  p5 {
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    grid-column: 2;
+    grid-row: 6;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 20px;
+    word-wrap: break-word;
+  }
+}
+
+/* grid 450 */
+@media (min-width: 450px) {
+  .ommig_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding-top: 4rem;
+    gap: 10px;
+  }
+
+  .detaljer_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    padding-top: 5rem;
+    padding-bottom: 50px;
+    gap: 10px;
+    line-height: 2.5rem;
+  }
+
+  .profil_billede {
+    grid-column: 2/2;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+  }
+}
+
+/* grid 600 */
+@media (min-width: 600px) {
+  .ommig_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding-top: 4rem;
+    gap: 10px;
+  }
+
+  .detaljer_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    padding-top: 5rem;
+    padding-bottom: 50px;
+    gap: 10px;
+    line-height: 2.5rem;
+  }
+
+  .profil_billede {
+    grid-column: 2/2;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+  }
+}
+
+/* grid 800 */
+
+@media (min-width: 800px) {
+  #grid_profil {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .profil_billede {
+    grid-column: 3/4;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+  }
 }
