--- a/ommig.css
+++ b/ommig.css
@@ -160,6 +160,139 @@ p5 {
   word-wrap: break-word;
 }
 
+/* tekststørrelser 428 */
+
+@media (min-width: 428px) {
+  .ommig_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding-top: 4rem;
+    gap: 10px;
+  }
+
+  h2 {
+    /* font-family: "Cinzel", serif; */
+    /* font-family: "Cinzel Decorative", cursive; */
+    font-family: "Vujahday Script", cursive;
+    font-size: 25px;
+    grid-column: 3/4;
+    text-align: center;
+    padding-bottom: 30px;
+  }
+
+  h3 {
+    /* font-family: "Vujahday Script", cursive; */
+    font-family: "Cinzel", serif;
+    font-size: 19px;
+    grid-column: 1/3;
+    text-align: left;
+    padding-left: 30px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+  }
+
+  h4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 14px;
+    grid-column: 1/3;
+    text-align: left;
+    font-weight: 300;
+    padding-left: 30px;
+    padding-right: 10px;
+  }
+
+  p {
+    font-family: "Outfit", sans-serif;
+    font-size: 10px;
+    grid-column: 1/3;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    line-height: 20px;
+    word-wrap: break-word;
+  }
+
+  .detaljer_beskrivelse h4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 14px;
+    grid-column: 1;
+    grid-row: 1;
+    text-align: left;
+    font-weight: 300;
+    padding-left: 30px;
+    padding-right: 10px;
+  }
+
+  p1 {
+    font-family: "Outfit", sans-serif;
+    font-size: 10px;
+    grid-column: 2;
+    grid-row: 2;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p2 {
+    font-family: "Outfit", sans-serif;
+    font-size: 10px;
+    grid-column: 2;
+    grid-row: 3;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p3 {
+    font-family: "Outfit", sans-serif;
+    font-size: 10px;
+    grid-column: 2;
+    grid-row: 4;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p4 {
+    font-family: "Outfit", sans-serif;
+    font-size: 10px;
+    grid-column: 2;
+    grid-row: 5;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  p5 {
+    font-family: "Outfit", sans-serif;
+    font-size: 10px;
+    grid-column: 2;
+    grid-row: 6;
+    text-align: left;
+    font-weight: 400;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 0px;
+    word-wrap: break-word;
+  }
+
+  .detaljer_ikoner img {
+    width: 0.9rem;
+  }
+}
+
 /* tekststørrelser 450 */
 
 @media (min-width: 450px) {
@@ -176,6 +309,7 @@ p5 {
     font-size: 30px;
     grid-column: 3/4;
     text-align: center;
+    padding-bottom: 30px;
   }
 
   h3 {
@@ -290,19 +424,14 @@ p5 {
 /* tekststørrelser 600 */
 
 @media (min-width: 600px) {
-  .ommig_beskrivelse {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    padding-top: 4rem;
-    gap: 10px;
-  }
   h2 {
     /* font-family: "Cinzel", serif; */
     /* font-family: "Cinzel Decorative", cursive; */
     font-family: "Vujahday Script", cursive;
-    font-size: 35px;
+    font-size: 40px;
     grid-column: 2/2;
     text-align: center;
+    padding-bottom: 30px;
   }
 
   h3 {
@@ -414,6 +543,97 @@ p5 {
   }
 }
 
+/* tekststørrelser 800 */
+
+@media (min-width: 800px) {
+  h2 {
+    /* font-family: "Cinzel", serif; */
+    /* font-family: "Cinzel Decorative", cursive; */
+    font-family: "Vujahday Script", cursive;
+    font-size: 50px;
+    grid-column: 2/2;
+  }
+
+  h3 {
+    /* font-family: "Vujahday Script", cursive; */
+    font-family: "Cinzel", serif;
+    font-size: 34px;
+    grid-column: 3/3;
+  }
+
+  h4 {
+    font-size: 26px;
+    grid-column: 1/3;
+  }
+
+  p {
+    font-size: 20px;
+    grid-column: 1/3;
+  }
+
+  .detaljer_beskrivelse h4 {
+    font-size: 26px;
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  p1 {
+    font-size: 20px;
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  p2 {
+    font-size: 20px;
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  p3 {
+    font-size: 20px;
+    grid-column: 2;
+    grid-row: 4;
+  }
+
+  p4 {
+    font-size: 20px;
+    grid-column: 2;
+    grid-row: 5;
+  }
+
+  p5 {
+    font-size: 20px;
+    grid-column: 2;
+    grid-row: 6;
+  }
+}
+
+/* grid 428 */
+@media (min-width: 428px) {
+  .ommig_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding-top: 4rem;
+    gap: 10px;
+  }
+
+  .detaljer_beskrivelse {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    padding-top: 5rem;
+    padding-bottom: 50px;
+    gap: 10px;
+    line-height: 2.5rem;
+  }
+
+  .profil_billede {
+    grid-column: 2/2;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+  }
+}
+
 /* grid 450 */
 @media (min-width: 450px) {
   .ommig_beskrivelse {
@@ -474,8 +694,31 @@ p5 {
     grid-template-columns: repeat(5, 1fr);
   }
 
+  .ommig_beskrivelse {
+    /* display: grid;
+    grid-template-columns: 1fr 2fr 1fr; */
+    padding-top: 4rem;
+    gap: 10px;
+  }
+
+  .detaljer_beskrivelse {
+    /* display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr; */
+    padding-top: 5rem;
+    padding-bottom: 50px;
+    gap: 10px;
+    line-height: 2.5rem;
+  }
+
   .profil_billede {
-    grid-column: 3/4;
+    grid-column: 2/2;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+  }
+
+  .deltajer_ikoner {
+    grid-column: 2/2;
     padding-top: 1rem;
     padding-bottom: 2rem;
   }
